force-app/main/default/objects/Contact/fields/EMS_EM_PP__c.field-meta.xml
<CustomField>
    <fullName>EMS_EM_PP__c</fullName>
    <label>Probation Period (In Days)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>