force-app/main/default/objects/Contact/fields/EMS_EM_Previous_Company_HR_EmailId__c.field-meta.xml
<CustomField>
    <fullName>EMS_EM_Previous_Company_HR_EmailId__c</fullName>
    <label>Previous Company HR EmailId</label>
    <type>Email</type>
</CustomField>