force-app/main/default/objects/Contact/fields/EMS_EM_Previous_Company_Name3__c.field-meta.xml
<CustomField>
    <fullName>EMS_EM_Previous_Company_Name3__c</fullName>
    <label>Previous Company Name</label>
    <type>TextArea</type>
</CustomField>