force-app/main/default/objects/Contact/fields/EMS_EM_ReportingM__c.field-meta.xml
<CustomField>
    <fullName>EMS_EM_ReportingM__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Reporting Manager</label>
    <referenceTo>EMS_EM_Resource__c</referenceTo>
    <relationshipLabel>Contacts</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>