force-app/main/default/objects/Contact/fields/EMS_EM_Shift__c.field-meta.xml
<CustomField>
    <fullName>EMS_EM_Shift__c</fullName>
    <label>Shift</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Morning</fullName>
            </value>
            <value>
                <fullName>Afternoon</fullName>
            </value>
            <value>
                <fullName>Night</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>