force-app/main/default/objects/Contact/fields/EMS_EM_ShiftEnd__c.field-meta.xml
<CustomField>
    <fullName>EMS_EM_ShiftEnd__c</fullName>
    <label>Shift End Time</label>
    <type>Time</type>
</CustomField>