force-app/main/default/objects/Contact/fields/EMS_EM_ShiftStart__c.field-meta.xml
<CustomField>
    <fullName>EMS_EM_ShiftStart__c</fullName>
    <label>Shift Start Time</label>
    <type>Time</type>
</CustomField>