force-app/main/default/objects/Contact/fields/EMS_EM_To_Date2__c.field-meta.xml
<CustomField>
    <fullName>EMS_EM_To_Date2__c</fullName>
    <label>To Date</label>
    <type>Date</type>
</CustomField>