force-app/main/default/objects/Contact/fields/EMS_Employee_Type__c.field-meta.xml
<CustomField>
    <fullName>EMS_Employee_Type__c</fullName>
    <label>Employee Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Part-time</fullName>
            </value>
            <value>
                <fullName>Full-time</fullName>
            </value>
            <value>
                <fullName>Contractor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>