force-app/main/default/objects/Contact/fields/EMS_Job_Application_Id__c.field-meta.xml
<CustomField>
    <fullName>EMS_Job_Application_Id__c</fullName>
    <label>Job Application Id</label>
    <length>25</length>
    <type>Text</type>
</CustomField>