force-app/main/default/objects/Contact/fields/EMS_LM_Maternity_Leave__c.field-meta.xml
<CustomField>
    <fullName>EMS_LM_Maternity_Leave__c</fullName>
    <defaultValue>false</defaultValue>
    <description>For HR to enable Maternity Leave</description>
    <label>Maternity Leave</label>
    <type>Checkbox</type>
</CustomField>