force-app/main/default/objects/Contact/fields/EMS_LM_No_Of_Available_Bereavement_Leave__c.field-meta.xml
<CustomField>
    <fullName>EMS_LM_No_Of_Available_Bereavement_Leave__c</fullName>
    <formula>EMS_LM_No_of_Bereavement_Leaves_Credit__c -  EMS_LM_No_Of_Utilized_Bereavement_Leaves__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>No of Available Bereavement Leaves</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>