force-app/main/default/objects/Contact/fields/EMS_LM_No_Of_Available_Compensatory_Off__c.field-meta.xml
<CustomField>
    <fullName>EMS_LM_No_Of_Available_Compensatory_Off__c</fullName>
    <formula>EMS_LM_No_Of_Compensatory_Off_Credit__c -  EMS_LM_No_OF_Utilized_Compensatory_Off__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>No Of Available Compensatory Off</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>