force-app/main/default/objects/Contact/fields/EMS_LM_No_of_Available_Loss_of_Pay__c.field-meta.xml
<CustomField>
    <fullName>EMS_LM_No_of_Available_Loss_of_Pay__c</fullName>
    <formula>EMS_LM_No_of_Off_Credit__c -  EMS_LM_No_Of_Utilized_Loss_Of_Pay__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>No of Available Loss of Pay</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>