force-app/main/default/objects/Contact/fields/EMS_LM_No_of_Available_Marriage_Leave__c.field-meta.xml
<CustomField>
    <fullName>EMS_LM_No_of_Available_Marriage_Leave__c</fullName>
    <formula>EMS_LM_No_of_Marriage_Leave_Credit__c - EMS_LM_No_of_Utilized_Marriage_Leave__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>No of Available Marriage Leave</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>