force-app/main/default/objects/Contact/fields/EMS_LM_No_Of_Available_Maternity_Leave__c.field-meta.xml
<CustomField>
    <fullName>EMS_LM_No_Of_Available_Maternity_Leave__c</fullName>
    <formula>EMS_LM_No_Of_Maternity_Leaves_Credit__c -  EMS_LM_No_Of_Utilized_Maternity_Leaves__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>No Of Available Maternity Leave</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>