force-app/main/default/objects/Contact/fields/EMS_LM_No_Of_Available_Paternity_Leave__c.field-meta.xml
<CustomField>
    <fullName>EMS_LM_No_Of_Available_Paternity_Leave__c</fullName>
    <formula>EMS_LM_No_Of_Paternity_Leaves_Credit__c -  No_Of_Utilized_Paternity_Leaves__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>No of Available Paternity Leaves</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>