force-app/main/default/objects/Contact/fields/EMS_LM_No_Of_Availble_Leaves__c.field-meta.xml
<CustomField>
    <fullName>EMS_LM_No_Of_Availble_Leaves__c</fullName>
    <formula>EMS_LM_No_Of_Leaves_Credit__c - EMS_LM_No_Of_Utilized_Leaves__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>No Of Availble Leaves</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>