force-app/main/default/objects/Contact/fields/EMS_LM_No_Of_Carry_Forward_Leaves__c.field-meta.xml
<CustomField>
    <fullName>EMS_LM_No_Of_Carry_Forward_Leaves__c</fullName>
    <label>No of Carry Forward Leaves</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>