force-app/main/default/objects/Contact/fields/EMS_LM_No_Of_Leaves_Credit__c.field-meta.xml
<CustomField>
    <fullName>EMS_LM_No_Of_Leaves_Credit__c</fullName>
    <defaultValue>0</defaultValue>
    <label>No Of Annual Leaves Credit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>