force-app/main/default/objects/Contact/fields/EMS_LM_No_of_Off_Credit__c.field-meta.xml
<CustomField>
    <fullName>EMS_LM_No_of_Off_Credit__c</fullName>
    <label>No of Loss of Pay Credit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>