force-app/main/default/objects/Contact/fields/EMS_LM_No_Of_Utilized_Bereavement_Leaves__c.field-meta.xml
<CustomField>
    <fullName>EMS_LM_No_Of_Utilized_Bereavement_Leaves__c</fullName>
    <defaultValue>0</defaultValue>
    <label>No of Utilized Bereavement Leaves</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>