force-app/main/default/objects/Contact/fields/EMS_LM_No_OF_Utilized_Compensatory_Off__c.field-meta.xml
<CustomField>
    <fullName>EMS_LM_No_OF_Utilized_Compensatory_Off__c</fullName>
    <defaultValue>0</defaultValue>
    <label>No of Utilized Compensatory Off</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>