force-app/main/default/objects/Contact/fields/EMS_LM_No_Of_Utilized_Leaves__c.field-meta.xml
<CustomField>
    <fullName>EMS_LM_No_Of_Utilized_Leaves__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Annual available leaves of employee</description>
    <label>No of Utilized Annual Leaves</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>