force-app/main/default/objects/Contact/fields/EMS_LM_No_Of_Utilized_Loss_Of_Pay__c.field-meta.xml
<CustomField>
    <fullName>EMS_LM_No_Of_Utilized_Loss_Of_Pay__c</fullName>
    <defaultValue>0</defaultValue>
    <label>No of Utilized Loss of Pay</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>