force-app/main/default/objects/Contact/fields/EMS_LM_No_of_Utilized_Marriage_Leave__c.field-meta.xml
<CustomField>
    <fullName>EMS_LM_No_of_Utilized_Marriage_Leave__c</fullName>
    <label>No of Utilized Marriage Leave</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>