force-app/main/default/objects/Contact/fields/EMS_LM_User2__c.field-meta.xml
<CustomField>
    <fullName>EMS_LM_User2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Second approver for Approval Process.</description>
    <label>Approver2</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Contacts3</relationshipName>
    <type>Lookup</type>
</CustomField>