force-app/main/default/objects/Contact/fields/EMS_LM_User_1__c.field-meta.xml
<CustomField>
    <fullName>EMS_LM_User_1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Approver 1</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Contacts2</relationshipName>
    <type>Lookup</type>
</CustomField>