force-app/main/default/objects/Contact/fields/EMS_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>EMS_Phone_Number__c</fullName>
    <label>Contact Number</label>
    <type>Phone</type>
</CustomField>