force-app/main/default/objects/Contact/fields/EMS_Projet_Budget__c.field-meta.xml
<CustomField>
    <fullName>EMS_Projet_Budget__c</fullName>
    <label>Project Budget($)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>