force-app/main/default/objects/Contact/fields/EMS_RM_Applicant_Profile_Completed__c.field-meta.xml
<CustomField>
    <fullName>EMS_RM_Applicant_Profile_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Applicant Profile Completed</label>
    <type>Checkbox</type>
</CustomField>