force-app/main/default/objects/Contact/fields/EMS_RM_ApplicantStatus_Update__c.field-meta.xml
<CustomField>
    <fullName>EMS_RM_ApplicantStatus_Update__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Offer rolled out</fullName>
            </value>
            <value>
                <fullName>Offer accepted</fullName>
            </value>
            <value>
                <fullName>Offer rejected</fullName>
            </value>
            <value>
                <fullName>Hired</fullName>
            </value>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Did not join</fullName>
            </value>
            <value>
                <fullName>Active - Probation</fullName>
            </value>
            <value>
                <fullName>Inactive</fullName>
            </value>
            <value>
                <fullName>Notice Period</fullName>
            </value>
            <value>
                <fullName>ABSENT</fullName>
                <isActive>false</isActive>
                <label>ABSENT</label>
            </value>
            <value>
                <fullName>Docs received</fullName>
                <isActive>false</isActive>
                <label>Docs received</label>
            </value>
            <value>
                <fullName>Docs verified</fullName>
                <isActive>false</isActive>
                <label>Docs verified</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>