force-app/main/default/objects/Contact/fields/EMS_RM_Candidate_Id__c.field-meta.xml
<CustomField>
    <fullName>EMS_RM_Candidate_Id__c</fullName>
    <displayFormat>C.ID_{000000}</displayFormat>
    <externalId>true</externalId>
    <label>Candidate Id</label>
    <type>AutoNumber</type>
</CustomField>