force-app/main/default/objects/Contact/fields/EMS_RM_CheckUserMail__c.field-meta.xml
<CustomField>
    <fullName>EMS_RM_CheckUserMail__c</fullName>
    <caseSensitive>true</caseSensitive>
    <label>User Email</label>
    <type>Email</type>
    <unique>true</unique>
</CustomField>