force-app/main/default/objects/Contact/fields/EMS_RM_Current_Job_Role__c.field-meta.xml
<CustomField>
    <fullName>EMS_RM_Current_Job_Role__c</fullName>
    <label>Designation</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Accounts Manager</fullName>
            </value>
            <value>
                <fullName>Associate Business Analyst</fullName>
            </value>
            <value>
                <fullName>Associate Developer</fullName>
            </value>
            <value>
                <fullName>Associate Engineer</fullName>
            </value>
            <value>
                <fullName>Associate Project Manager</fullName>
            </value>
            <value>
                <fullName>Associate Salesforce Business Analyst</fullName>
            </value>
            <value>
                <fullName>Associate Salesforce Developer</fullName>
            </value>
            <value>
                <fullName>Associate Salesforce Quality Analyst</fullName>
            </value>
            <value>
                <fullName>Associate SFMC Developer</fullName>
            </value>
            <value>
                <fullName>Associate Talent Acquisition Partner</fullName>
            </value>
            <value>
                <fullName>Account Executive</fullName>
            </value>
            <value>
                <fullName>Accounts Executive</fullName>
            </value>
            <value>
                <fullName>Associate Architect</fullName>
            </value>
            <value>
                <fullName>Business Systems Analyst</fullName>
            </value>
            <value>
                <fullName>Consultant Architecture</fullName>
            </value>
            <value>
                <fullName>Data Analyst</fullName>
            </value>
            <value>
                <fullName>Data Scientist</fullName>
            </value>
            <value>
                <fullName>Delivery Manager</fullName>
            </value>
            <value>
                <fullName>Director of Sales</fullName>
            </value>
            <value>
                <fullName>HR Executive</fullName>
            </value>
            <value>
                <fullName>HR Manager</fullName>
            </value>
            <value>
                <fullName>Jr. UX Designer</fullName>
            </value>
            <value>
                <fullName>Lead Data Migration Engineer</fullName>
            </value>
            <value>
                <fullName>Lead Salesforce Business System Analyst</fullName>
            </value>
            <value>
                <fullName>Lead Salesforce Developer</fullName>
            </value>
            <value>
                <fullName>Lead Salesforce Quality Analyst</fullName>
            </value>
            <value>
                <fullName>Project Manager</fullName>
            </value>
            <value>
                <fullName>Salesforce Administrator</fullName>
            </value>
            <value>
                <fullName>Salesforce Application Designer</fullName>
            </value>
            <value>
                <fullName>Salesforce Business Analyst</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>