force-app/main/default/objects/Contact/fields/EMS_RM_Current_Location__c.field-meta.xml
<CustomField>
    <fullName>EMS_RM_Current_Location__c</fullName>
    <label>Current Location</label>
    <length>40</length>
    <type>Text</type>
</CustomField>