force-app/main/default/objects/Contact/fields/EMS_RM_Education__c.field-meta.xml
<CustomField>
    <fullName>EMS_RM_Education__c</fullName>
    <label>Education</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Post Graduate</fullName>
            </value>
            <value>
                <fullName>Graduate</fullName>
            </value>
            <value>
                <fullName>Under Graduate(+2)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>