force-app/main/default/objects/Contact/fields/EMS_RM_Employee_Id__c.field-meta.xml
<CustomField>
    <fullName>EMS_RM_Employee_Id__c</fullName>
    <label>Employee ID</label>
    <length>30</length>
    <type>Text</type>
</CustomField>