force-app/main/default/objects/Contact/fields/EMS_RM_Expected_CTC__c.field-meta.xml
<CustomField>
    <fullName>EMS_RM_Expected_CTC__c</fullName>
    <label>Expected CTC</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>