force-app/main/default/objects/Contact/fields/EMS_RM_FirstName__c.field-meta.xml
<CustomField>
    <fullName>EMS_RM_FirstName__c</fullName>
    <label>First Name</label>
    <length>25</length>
    <type>Text</type>
</CustomField>