force-app/main/default/objects/Contact/fields/EMS_RM_Industry__c.field-meta.xml
<CustomField>
    <fullName>EMS_RM_Industry__c</fullName>
    <label>Department Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Information Technology</fullName>
            </value>
            <value>
                <fullName>Human Resource</fullName>
            </value>
            <value>
                <fullName>Technology</fullName>
            </value>
            <value>
                <fullName>Talent Acquisition</fullName>
            </value>
            <value>
                <fullName>Finance</fullName>
            </value>
            <value>
                <fullName>Sales</fullName>
            </value>
            <value>
                <fullName>Marketing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>