force-app/main/default/objects/Contact/fields/EMS_RM_Job_Title__c.field-meta.xml
<CustomField>
    <fullName>EMS_RM_Job_Title__c</fullName>
    <label>Job Title Applied for</label>
    <type>TextArea</type>
</CustomField>