force-app/main/default/objects/Contact/fields/EMS_RM_Last_Working_day__c.field-meta.xml
<CustomField>
    <fullName>EMS_RM_Last_Working_day__c</fullName>
    <label>Last Working Day</label>
    <type>Date</type>
</CustomField>