force-app/main/default/objects/Contact/fields/EMS_RM_LastName__c.field-meta.xml
<CustomField>
    <fullName>EMS_RM_LastName__c</fullName>
    <label>Last Name</label>
    <length>25</length>
    <type>Text</type>
</CustomField>