force-app/main/default/objects/Contact/fields/EMS_RM_Notice_Period__c.field-meta.xml
<CustomField>
    <fullName>EMS_RM_Notice_Period__c</fullName>
    <label>Notice period</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>