force-app/main/default/objects/Contact/fields/EMS_RM_Permanent_Address__c.field-meta.xml
<CustomField>
    <fullName>EMS_RM_Permanent_Address__c</fullName>
    <label>Permanent Address</label>
    <type>TextArea</type>
</CustomField>