force-app/main/default/objects/Contact/fields/EMS_RM_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>EMS_RM_Phone_Number__c</fullName>
    <label>Phone Number</label>
    <type>Phone</type>
</CustomField>