force-app/main/default/objects/Contact/fields/EMS_RM_Previous_Company_Name__c.field-meta.xml
<CustomField>
    <fullName>EMS_RM_Previous_Company_Name__c</fullName>
    <label>Previous Company Name</label>
    <type>TextArea</type>
</CustomField>