force-app/main/default/objects/Contact/fields/EMS_RM_Resource_Email_id__c.field-meta.xml
<CustomField>
    <fullName>EMS_RM_Resource_Email_id__c</fullName>
    <label>Email Id</label>
    <type>Email</type>
</CustomField>