force-app/main/default/objects/Contact/fields/EMS_RM_Resource_Mobile_no__c.field-meta.xml
<CustomField>
    <fullName>EMS_RM_Resource_Mobile_no__c</fullName>
    <label>Mobile no</label>
    <type>Phone</type>
</CustomField>