force-app/main/default/objects/Contact/fields/EMS_RM_Serving_Notice_Period__c.field-meta.xml
<CustomField>
    <fullName>EMS_RM_Serving_Notice_Period__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Serving Notice Period</label>
    <type>Checkbox</type>
</CustomField>