force-app/main/default/objects/Contact/fields/EMS_RM_University_Name__c.field-meta.xml
<CustomField>
    <fullName>EMS_RM_University_Name__c</fullName>
    <label>College/University Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>