force-app/main/default/objects/Contact/fields/EMS_TM_Billable__c.field-meta.xml
<CustomField>
    <fullName>EMS_TM_Billable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Billable</label>
    <type>Checkbox</type>
</CustomField>