force-app/main/default/objects/Contact/fields/EMS_TM_In_Billing__c.field-meta.xml
<CustomField>
    <fullName>EMS_TM_In_Billing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>In Billing</label>
    <type>Checkbox</type>
</CustomField>